Archive2/b6/dd7c45734454c4/output
In file included from /usr/local/include/c++/4.9.2/cstdlib:72:0,
                 from /usr/local/include/c++/4.9.2/ext/string_conversions.h:41,
                 from /usr/local/include/c++/4.9.2/bits/basic_string.h:2850,
                 from /usr/local/include/c++/4.9.2/string:52,
                 from /usr/local/include/c++/4.9.2/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.2/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.2/ios:42,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
main.cpp: In function 'void time_test()':
main.cpp:115:16: error: return-statement with a value, in function returning 'void' [-fpermissive]
         return EXIT_FAILURE;
                ^
main.cpp:124:16: error: return-statement with a value, in function returning 'void' [-fpermissive]
         return EXIT_FAILURE;
                ^
main.cpp:129:12: error: return-statement with a value, in function returning 'void' [-fpermissive]
     return EXIT_SUCCESS;
            ^
